added the logo and changed emails

--- a/templates/frontend/contact.html
+++ b/templates/frontend/contact.html
@@ -46,7 +46,7 @@
                     <h6>contact details</h6>
                     <ul class="list-unstyled info">
                       <li><span class="fas fa-map-marker-alt"></span><a href="javascript:void(0)">2307 Beverley Rd Brooklyn, New York 11226 United States</a></li>
-                      <li><span class="fas fa-envelope"></span><a href="mailto::Equita@7oroof.com">contact@revellaworldexpress.com</a></li>
+                      <li><span class="fas fa-envelope"></span><a href="mailto::Equita@7oroof.com">delivery@mundoswift.com</a></li>
                       <li><span class="fas fa-phone-alt"></span><a href="tel:01061245741">+12153250764</a></li>
                     </ul>
                   </div>
