--- a/templates/frontend/include/footer.html
+++ b/templates/frontend/include/footer.html
@@ -14,7 +14,7 @@ Footer #1
             <div class="col-12 col-lg-9 col-xl-8">
             <div class="widget-newsletter">
                 <div class="widget-content">
-                <p>Sign up for industry alerts,<br>insights from Revella.</p>
+                <p>Sign up for industry alerts,<br>insights from mundo.</p>
                 <form class="form-newsletter mailchimp">
                     <input class="form-control" type="email" name="email" placeholder="Your Email Address">
                     <input class="btn btn--primary" type="submit" value="sign up!">
@@ -34,8 +34,8 @@ Footer #1
                 <h5>about</h5>
             </div>
             <div class="widget-content">
-                <p>Revella World is a representative logistics operator providing full range of service in the sphere of customs cargo and transportation worldwide.</p>
-                <p>Email: contact@revellaworldfx.com</p>
+                <p>MundoSwift is a leading logistics operator offering comprehensive services in customs cargo handling and global transportation.</p>
+                <p>Email: delivery@mundoswift.com</p>
                 <!-- Start .module-social-->
                 <!-- <div class="module module-social"><a class="share-facebook" href="#"><i class="fab fa-facebook-f"> </i></a><a class="share-instagram" href="#"><i class="fab fa-instagram"></i></a><a class="share-twitter" href="#"><i class="fab fa-twitter"></i></a></div> -->
                 <!-- End .module-social-->
@@ -96,7 +96,7 @@ Footer #1
     <div class="footer-bottom">
         <div class="row">
         <div class="col-md-12 col-md-12 text--center footer-copyright">
-            <div class="copyright"><span>© RevellaWorld, With Love by</span><a href="/"> revellaworldfx.com</a></div>
+            <div class="copyright"><span>© MundoSwift, With Love by</span><a href="/"> mundoswift.com</a></div>
         </div>
         </div>
         <!--  End .row-->
