finished the services and about page

--- a/templates/frontend/about_us.html
+++ b/templates/frontend/about_us.html
@@ -11,15 +11,16 @@
         <div class="col-12 col-lg-4 offset-lg-4">
           <div class="title">
             <div class="title-sub-heading">
-              <p>Directions, That Matter!</p>
+              <p>Delivering What Matters Most</p>
             </div>
             <div class="title-heading">
-              <h1>Service That Saves Your Time!</h1>
+              <h1>Fast, Reliable Service That Saves You Time</h1>
             </div>
+
             <div class="clearfix"></div>
             <ol class="breadcrumb justify-content-center">
               <li class="breadcrumb-item"><a href="/">Home</a></li>
-              <li class="breadcrumb-item"><a href="{% url 'frontend:about' %}">Company</a></li>
+              <li class="breadcrumb-item"><a href="{% url 'frontend:about' %}">MundoSwift</a></li>
               <li class="breadcrumb-item active" aria-current="page">About Us</li>
             </ol>
           </div>
@@ -50,9 +51,10 @@ About #5 Section
             </div>
             <div class="about-block"> 
             <div class="block-left"> 
-                <p>Revella World Express is a representative logistics operator providing full range of service in the sphere of customs clearance transportation worldwide for any cargo</p>
-                <p>We pride ourselves on providing the best transport and shipping services available allover the world. Our skilled personnel, utilising the latest communications, tracking and combined with experience through integrated supply chain solutions!</p>
+              <p>MundoSwift is a global logistics provider offering a comprehensive range of services in customs clearance and international cargo transportation.</p>
+              <p>We take pride in delivering world-class transport and shipping solutions. Our experienced team leverages advanced communication systems, real-time tracking, and integrated supply chain strategies to ensure efficiency and reliability across the globe.</p>
             </div>
+
             </div>
             <div class="signature-block">
             <div class="signature-body"> 
@@ -68,8 +70,9 @@ About #5 Section
                 <div class="bg-section"><img class="img-fluid" src="{% static 'frontend/images/two_1.jpg' %}" alt="about Image"></div>
             </div>
             <div class="about-card">
-                <h6>Flexibile, Improved &amp; Accelerated Solutions!</h6>
-                <p>Providing full range of service in the sphere transportation worldwide.</p><a href=""><i class="icon-arrow-right"></i> our borchure</a>
+                <h6>Flexible, Enhanced & Accelerated Solutions</h6>
+                <p>Delivering a comprehensive range of global transportation services with efficiency and reliability.</p>
+                <a href=""><i class="icon-arrow-right"></i> our borchure</a>
             </div>
             </div>
         </div>
@@ -96,7 +99,7 @@ Counters Section
                 Individually Assess <br>Each Plan And Offer <br>Optimal Solutions!</h2><a class="btn btn--transparent btn--inverse" href="javascript:void(0)">our services</a>
             </div>
             <div class="col-12 col-lg-6 offset-lg-1">
-            <p class="heading-desc">Skilled personnel, utilising communications, tracking processing software, combined with decades of experience! Through an integrated supply chain solutions, Equita drives sustainable competitive advantages to some of Australia's largest companies.</p>
+            <p class="heading-desc">Our skilled team leverages advanced communication tools, real-time tracking systems, and decades of industry experience. Through integrated supply chain solutions, Equita delivers sustainable competitive advantages to some of Australia's leading companies.</p>
             <div class="counters-container">
                 <div class="counter counter-2">
                 <div class="counter-icon"> <i class="flaticon-018-packaging"></i></div>
@@ -166,7 +169,7 @@ Counters Section
                       <h4><a href="javascript:void(0)">air freight</a></h4>
                     </div>
                     <div class="service-desc">
-                      <p>We can provide with the comprehensive service in the sphere of urgent, valuable, fragile or any cargoes conscientious.</p>
+                      <p>We offer comprehensive services for urgent, valuable, fragile, or any type of cargo, handled with the utmost care and professionalism.</p>
                     </div>
                     <div class="service-list">
                       <ul class="list-unstyled"> 
@@ -192,7 +195,7 @@ Counters Section
                       <h4><a href="javascript:void(0)">ocean freight</a></h4>
                     </div>
                     <div class="service-desc">
-                      <p>We provides with the main types of basic sea transportation is implemented by our partners' vessels.</p>
+                      <p>We provide all major types of basic sea transportation through our trusted partners' vessels.</p>
                     </div>
                     <div class="service-list">
                       <ul class="list-unstyled"> 
@@ -218,7 +221,7 @@ Counters Section
                       <h4><a href="javascript:void(0)">road freight</a></h4>
                     </div>
                     <div class="service-desc">
-                      <p>We provides with the main types of basic sea transportation is implemented by our partners' vessels.</p>
+                      <p>We offer the primary modes of basic sea transportation, executed via our trusted partners' vessels.</p>
                     </div>
                     <div class="service-list">
                       <ul class="list-unstyled"> 
