--- a/templates/account/create_shipment.html
+++ b/templates/account/create_shipment.html
@@ -150,7 +150,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
                                         <label for="{{ form.booking_mode.id_for_label}}" class="form-label">Booking Mode</label>
@@ -163,7 +163,7 @@
                                         {{form.amount_paid}}
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
