finished adding map leaflet

--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="description" content="Reveller World FX" />
-    <title>Home - Reveller World FX</title>
+    <title>Home - MundoSwift</title>
     <link href="{% static 'frontend/images/favicon.png' %}" rel="icon" />
     <!--  Fonts ==
     -->
@@ -19,10 +19,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&amp;family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap"
       rel="stylesheet"
     />
+    
     <!--  Stylesheets==
     -->
     <link href="{% static 'frontend/css/vendor.min.css' %}" rel="stylesheet" />
     <link href="{% static 'frontend/css/style.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
       #google_translate_element {
@@ -79,5 +81,7 @@
     <script src="{% static 'frontend/js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'frontend/js/vendor.min.js' %}"></script>
     <script src="{% static 'frontend/js/functions.js' %}"></script>
+    
+    
   </body>
 </html>
