added updated email name

--- a/templates/frontend/include/footer.html
+++ b/templates/frontend/include/footer.html
@@ -35,7 +35,7 @@ Footer #1
             </div>
             <div class="widget-content">
                 <p>MundoSwift is a leading logistics operator offering comprehensive services in customs cargo handling and global transportation.</p>
-                <p>Email: delivery@mundoswift.com</p>
+                <p>Email: deliveries@mundoswift.com</p>
                 <!-- Start .module-social-->
                 <!-- <div class="module module-social"><a class="share-facebook" href="#"><i class="fab fa-facebook-f"> </i></a><a class="share-instagram" href="#"><i class="fab fa-instagram"></i></a><a class="share-twitter" href="#"><i class="fab fa-twitter"></i></a></div> -->
                 <!-- End .module-social-->
