added local time with javascript

--- a/templates/frontend/tracking.html
+++ b/templates/frontend/tracking.html
@@ -451,9 +451,9 @@ Cases & Clients #1 Section end
         div.style.lineHeight = '24px';
 
         div.innerHTML = `
-            <div><img src="https://img.icons8.com/emoji/24/airplane-emoji.png" style="vertical-align: middle;"/> Origin (Airplane)</div>
+            <div><img src="https://img.icons8.com/emoji/24/airplane-emoji.png" style="vertical-align: middle;"/> Origin</div>
             <div><span style="display: inline-block; width: 12px; height: 12px; background: blue; border-radius: 50%; margin-right: 6px;"></span> In Transit</div>
-            <div><img src="https://img.icons8.com/emoji/24/delivery-truck.png" style="vertical-align: middle;"/> Current Location (Truck)</div>
+            <div><img src="https://img.icons8.com/emoji/24/delivery-truck.png" style="vertical-align: middle;"/> Current Location</div>
         `;
         return div;
     };
