changed the first slide image and made some few corrcion

--- a/templates/frontend/tracking.html
+++ b/templates/frontend/tracking.html
@@ -19,6 +19,7 @@
 <!-- Start #page-title-->
 <section class="page-title bg-overlay bg-overlay-dark bg-parallax" id="page-title">
     <div class="bg-section"><img src="{% static 'frontend/images/track-img.jpg' %}" alt="Background"></div>
+    <!-- <div class="bg-section"><img src="{% static 'frontend/images/track-img.jpg' %}" alt="Background"></div> -->
     <div class="container mt-0">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6">
