--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -13,7 +13,8 @@ Slider #1 Section
         <div class="carousel owl-carousel custom-carousel carousel-navs carousel-dots" data-slide="1" data-slide-rs="1" data-autoplay="false" data-nav="true" data-dots="true" data-space="0" data-loop="true" data-speed="800" data-slider-id="#custom-carousel">
         <!--  Start .slide-->
         <div class="slide d-flex align-items-center bg-overlay bg-overlay-dark">
-            <div class="bg-section"><img src="{% static 'frontend/images/1.jpg' %}" alt="Background"></div>
+            <div class="bg-section"><img src="{% static 'frontend/images/hero-blaze.jpg' %}" alt="Background"></div>
+            <!-- <div class="bg-section"><img src="{% static 'frontend/images/1.jpg' %}" alt="Background"></div> -->
             <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-7">
@@ -420,7 +421,7 @@ Features #1 Section
                 <div class="employee-info"> 
                 <div class="employee-img"> <img src="{% static 'frontend/images/5.jpg' %}" alt="image"></div>
                 <div class="employee-body"> 
-                    <h6>(+1) 6124574122</h6>
+                    <!-- <h6>(+1) 6124574122</h6> -->
                     <p>Sales Representative</p>
                 </div>
                 </div>
