removed some fields and made some changes

--- a/templates/account/create_shipment.html
+++ b/templates/account/create_shipment.html
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
                                         <label for="{{ form.shipping_date.id_for_label}}" class="form-label">Shipping Date</label>
@@ -149,7 +149,7 @@
                                         {{form.delivery_date}}
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
