changed the content in base to stop showing revella fx

--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta name="description" content="Reveller World FX" />
+    <meta name="description" content="Mundoswift" />
     <title>Home - MundoSwift</title>
     <link href="{% static 'frontend/images/favicon.png' %}" rel="icon" />
     <!--  Fonts ==
